Linkin user to post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8000
 
 jwt.secret=your-super-secret-key-123456789012345678901234567890
 
-
+logging.level.org.springframework.security=DEBUG
+logging.level.moqim.me.facelook.security=DEBUG
 
 spring.datasource.url=jdbc:mysql://localhost:3306/facelook_db
 spring.datasource.username=root
