Adding comments logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=blog
 server.port=8000
 
-jwt.secret=your-super-secret-key-123456789012345678901234567890
+jwt.secret.key=xhkTdTfcS-LrtHAMr_QQhRP-HLhGGV
 
 logging.level.org.springframework.security=DEBUG
 logging.level.moqim.me.facelook.security=DEBUG
